k8s/04-alert-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-system
  template:
    metadata:
      labels:
        app: alert-system
    spec:
      containers:
      - name: alert-system
        image: dsbd-alert-system:latest
        imagePullPolicy: IfNotPresent
