k8s/02-user-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-manager
  template:
    metadata:
      labels:
        app: user-manager
    spec:
      containers:
      - name: user-manager
        image: dsbd-user-manager:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: user-manager-service
spec:
  selector:
    app: user-manager
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
