k8s/03-data-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
        monitoring: "true"
    spec:
      containers:
      - name: data-collector
        image: dsbd-data-collector:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        - containerPort: 50052
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: data-collector-service
spec:
  selector:
    app: data-collector
  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 5001
    - name: grpc
      protocol: TCP
      port: 50052
      targetPort: 50052
    - name: metrics
      protocol: TCP
      port: 8001
      targetPort: 8001
