k8s/05-notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
      - name: notifier
        image: dsbd-notifier:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: notifier-service
spec:
  selector:
    app: notifier
  ports:
    - name: metrics
      protocol: TCP
      port: 8002
      targetPort: 8002
