k8s/database.yaml
#database Postgres
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: homework3
spec:
  serviceName: "user-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine

          #ottimizzo le mie risorse con 8Ggia di RAM
          resources:
            requests:
              memory: "150Mi"   #minimo garantito per partire
              cpu: "100m"       #bassa priorità CPU
            limits:
              memory: "300Mi"   #limito massimo per il mio PC
              cpu: "500m"       #massimo mezzo core

          #aspettiamo 60s prima di controllare essendo un pc lento
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            periodSeconds: 20

          ports:
            - containerPort: 5432

          # Variabili d'ambiente dai Secrets
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 250Mi  #Ridotto per risparmiare disco e I/O

---
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
  namespace: homework3
spec:
  selector:
    app: user-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
#database mongo
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: homework3
spec:
  serviceName: "mongo-service"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0


          resources:
            requests:
              memory: "150Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "500m"


          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 60
            periodSeconds: 20

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongo-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 250Mi

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: homework3
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
