k8s/deployments.yaml
#Deployment dello user-manager
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager
  namespace: homework3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-manager
  template:
    metadata:
      labels:
        app: user-manager
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: user-manager
          image: user-manager:v1
          imagePullPolicy: Never

          #ottimizzo le risorse per il mio PC
          resources:
            requests:
              memory: "80Mi"
              cpu: "50m"
            limits:
              memory: "250Mi"
              cpu: "500m"

          ports:
            - containerPort: 50051 #gRPC
            - containerPort: 8000  #metriche per Prometheus
            - containerPort: 5000  #Flask
---
apiVersion: v1
kind: Service
metadata:
  name: user-manager-service
  namespace: homework3
spec:
  selector:
    app: user-manager
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: metrics
      port: 8000
      targetPort: 8000

---

#Deployment del data-collector
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-collector
  namespace: homework3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8001"
    spec:
      containers:
        - name: data-collector
          image: data-collector:v1
          imagePullPolicy: Never


          resources:
            requests:
              memory: "80Mi"   #do un po piu di RAM per i file JSON
              cpu: "50m"
            limits:
              memory: "250Mi"
              cpu: "500m"

          ports:
            - containerPort: 5001
            - containerPort: 50052
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: data-collector-service
  namespace: homework3
spec:
  selector:
    app: data-collector
  ports:
    - name: http
      port: 5001
      targetPort: 5001
    - name: grpc
      port: 50052
      targetPort: 50052
    - name: metrics
      port: 8001
      targetPort: 8001

---

#Deployment del notifier
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  namespace: homework3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8002"
    spec:
      containers:
        - name: notifier
          image: notifier:v1
          imagePullPolicy: Never


          resources:
            requests:
              memory: "60Mi"
              cpu: "50m"
            limits:
              memory: "180Mi"
              cpu: "400m"

          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: notifier-service
  namespace: homework3
spec:
  selector:
    app: notifier
  ports:
    - name: metrics
      port: 8002
      targetPort: 8002

---

#Deployment dell'alert-system
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-system
  namespace: homework3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-system
  template:
    metadata:
      labels:
        app: alert-system
    spec:
      containers:
        - name: alert-system
          image: alert-system:v1
          imagePullPolicy: Never


          resources:
            requests:
              memory: "60Mi"
              cpu: "50m"
            limits:
              memory: "180Mi"
              cpu: "400m"
