k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: homework3
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: internal
      targetPort: 9092
    - port: 9093
      name: controller
      targetPort: 9093
  selector:
    app: kafka
  clusterIP: None  # Headless service

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: homework3
spec:
  serviceName: "kafka-service"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.0

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "600Mi"
              cpu: "1000m"

          ports:
            - containerPort: 9092
            - containerPort: 9093

          command:
            - "sh"
            - "-c"
            - |
              export CLUSTER_ID=MkU3OEVBNTcwNTJENDM2Qk
              if [ ! -f /var/lib/kafka/data/meta.properties ]; then
                echo "Storage vuoto: Formattazione KRaft..."
                kafka-storage format -t $CLUSTER_ID -c /etc/kafka/kafka.properties --ignore-formatted
              else
                echo "Dati trovati: Avvio normale."
              fi
              /etc/confluent/docker/run

          livenessProbe:
            exec:
              command: ["sh", "-c", "nc -z localhost 9092"]
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 10
          readinessProbe:
            exec:
              command: ["sh", "-c", "nc -z localhost 9092"]
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 10

          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data

  volumeClaimTemplates:
  - metadata:
      name: kafka-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 250Mi
